<resources>
    <string name="app_name">Fun with Countries</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Fun with Countries</string>
    <!--Invite-->
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_subject">Try this great app!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>

    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <!--Game Mode Button Labels-->
    <string name="title_select_game_mode">Select your Game Mode</string>
    <string name="button_game_mode_capitals">Learn the Capitals</string>
    <string name="button_game_mode_flags">Guess the Flags</string>
    <string name="button_game_mode_subregion">Discover the Subregions</string>
    <string name="button_game_mode_randomize">Randomize</string>
    <string name="title_select_other_options">Other Options</string>
    <string name="button_game_scores">High Scores</string>
    <string name="buton_share_this_app">Share this App</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="action_submit">Yes</string>
    <string name="action_next_question">Next Question</string>
    <string name="action_view_scores">View Scores</string>

    <!--Question Header Ids-->
    <item name="game_progress" type="id" />
    <item name="game_score" type="id" />
    <item name="game_timer" type="id" />
    <item name="question" type="id" />
    <item name="question_country" type="id" />
    <!--Choice Button Ids-->
    <item name="choice1" type="id" />
    <item name="choice2" type="id" />
    <item name="choice3" type="id" />
    <item name="choice4" type="id" />
    <!--Answer Confirmation Ids-->
    <item name="answer_confirmation_text" type="id" />
    <item name="answer_confirmation_button" type="id" />
    <!--Next Question Ids-->
    <item name="next_question_answer_result_text" type="id" />
    <item name="next_question_text" type="id" />
    <item name="next_question_button" type="id" />
    <item name="view_scores" type="id" />
    <!--High Scores-->
    <string name="title_activity_scores">High Scores</string>
    <string name="score_date_header">Date</string>
    <string name="score_game_mode_header">Mode</string>
    <string name="scores_score_header">Correct</string>
    <string name="score_percent_header">%</string>
    <string name="score_final_header">Score</string>
    <string name="score_fab_description">Share your high scores</string>
    <!--Widget-->
    <string name="countries_widget_title">Fun with Countries</string>
    <!--Google Play Services-->
    <string name="admob_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
