<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rocks.throw20.funwithcountries.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/game_mode_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_select_game_mode"
        android:textSize="@dimen/subheading_text"
        />

    <Button
        android:id="@+id/button_fun_with_capitals"
        android:layout_below="@+id/game_mode_title"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_capitals"
        />

    <Button
        android:id="@+id/button_fun_with_flags"
        android:layout_below="@+id/button_fun_with_capitals"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_flags"
        />

    <Button
        android:id="@+id/button_fun_with_regions"
        android:layout_below="@+id/button_fun_with_flags"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_subregion"
        />

    <Button
        android:id="@+id/button_randomize"
        android:layout_below="@+id/button_fun_with_regions"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_randomize"
        />
    <TextView
        android:id="@+id/game_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_randomize"
        android:text="@string/title_select_other_options"
        android:textSize="@dimen/subheading_text"
        />
    <Button
        android:id="@+id/button_scores"
        android:layout_below="@+id/game_options"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_scores"
        />

    <Button
        android:id="@+id/button_share"
        android:layout_below="@+id/button_scores"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/buton_share_this_app"
        />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>