<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/game_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="rocks.throw20.funwithcountries.GameActivity"
    tools:showIn="@layout/activity_game">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_select_game_mode"
        android:textSize="@dimen/subheading_text"
        />

    <Button
        android:id="@+id/choice1"
        android:layout_below="@+id/question"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_capitals"
        />

    <Button
        android:id="@+id/choice2"
        android:layout_below="@+id/choice1"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_flags"
        />

    <Button
        android:id="@+id/choice3"
        android:layout_below="@+id/choice2"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_subregion"
        />

    <Button
        android:id="@+id/choice4"
        android:layout_below="@+id/choice3"
        android:layout_height="wrap_content"
        android:layout_width="520dp"
        android:text="@string/button_game_mode_randomize"
        />




</RelativeLayout>