<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="rocks.throw20.funwithcountries.ScoresActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/scores_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/score_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#E0E0E0"
            >
            <TextView
                android:id="@+id/score_date_header"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin_8dp"
                android:layout_marginEnd="@dimen/text_margin_8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/score_date_header"
            />
            <TextView
                android:id="@+id/score_game_mode_header"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin_8dp"
                android:layout_marginEnd="@dimen/text_margin_8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/score_game_mode_header"
            />
            <TextView
                android:id="@+id/scores_score_header"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin_8dp"
                android:layout_marginEnd="@dimen/text_margin_8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/scores_score_header"
                />
            <TextView
                android:id="@+id/score_percent_header"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin_8dp"
                android:layout_marginEnd="@dimen/text_margin_8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/score_percent_header"
                />
            <TextView
                android:id="@+id/score_final_header"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/text_margin_8dp"
                android:layout_marginEnd="@dimen/text_margin_8dp"
                android:textAppearance="?attr/textAppearanceListItem"
                android:text="@string/score_final_header"
                />
        </LinearLayout>
        <fragment
            android:id="@+id/scores_fragment"
            android:tag="scoresList"
            android:name="rocks.throw20.funwithcountries.ScoresActivityFragment"
            tools:layout="@layout/fragment_scores_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            />

    </FrameLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_menu_share" />
</android.support.design.widget.CoordinatorLayout>
